--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@clerk/elements": "^0.22.19",
+        "@clerk/nextjs": "^6.11.0",
         "@prisma/client": "^6.3.1",
         "imagekit": "^6.0.0",
         "imagekitio-next": "^1.0.1",
