--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "@clerk/elements": "^0.22.19",
         "@clerk/nextjs": "^6.11.0",
         "@prisma/client": "^6.3.1",
+        "framer-motion": "^12.0.11",
         "imagekit": "^6.0.0",
         "imagekitio-next": "^1.0.1",
         "next": "15.1.6",
         "prisma": "^6.3.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.4.0",
         "ts-node": "^10.9.2"
     },
     "devDependencies": {
