--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@clerk/elements": "^0.22.19",
         "@clerk/nextjs": "^6.11.0",
         "@prisma/client": "^6.3.1",
+        "@tanstack/react-query": "^5.66.0",
         "framer-motion": "^12.0.11",
         "imagekit": "^6.0.0",
         "imagekitio-next": "^1.0.1",
@@ -20,6 +21,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.4.0",
+        "react-infinite-scroll-component": "^6.1.0",
+        "timeago.js": "^4.0.2",
         "ts-node": "^10.9.2"
     },
     "devDependencies": {
